Allow opcache memory consumption to be configurable.

--- a/templates/10-opcache.ini.j2
+++ b/templates/10-opcache.ini.j2
@@ -8,7 +8,7 @@ opcache.enable={{ moodle3_opcache_enable }}
 opcache.enable_cli={{ moodle3_opcache_enable_cli }}
 
 ; The OPcache shared memory storage size.
-opcache.memory_consumption=128
+opcache.memory_consumption={{ moodle3_opcache_memory_consumption }}
 
 ; The amount of memory for interned strings in Mbytes.
 opcache.interned_strings_buffer=8
